--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-/*
-  Theme Name: BizPage
-  Theme URL: https://bootstrapmade.com/bizpage-bootstrap-business-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 
 body {
   background: #fff;
@@ -951,6 +941,73 @@ body.mobile-nav-active #mobile-nav-toggle {
 {
   color: #FF0000;
 }
+
+
+
+
+
+
+
+
+
+
+#paiment
+{
+  background: url("../img/services.jpg") center top no-repeat fixed;
+    background-size: cover;
+    background-position: center;
+    color: #efefef !important;
+    background-attachment: fixed;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#paiment h1
+{
+    text-align: center;
+    color: #000!important;
+    padding-bottom: 10px;
+   
+}
+#paiment h1::after
+{
+    content: '';
+    background: #efefef;
+    display: block;
+    height: 3px;
+    width: 170px;
+    margin: 20px auto 5px;
+}
+.paiment
+{
+    margin-top: 40px;
+}
+.icon
+{
+    font-size: 40px;
+    margin: 20px auto;
+    padding: 20px;
+    height: 80px;
+    width: 80px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+}
+#paiment p
+{
+    font-size: 14px;
+    margin-top: 20px;
+    color: #ccc;
+   
+
+}
+.paiment .col-md-3:hover{
+    background: #FF0000;
+    cursor: pointer;
+    transition: 0.7s;
+}
+#paiment .paiment-col:hover .icon {
+  background-color: #fff;
+}
+
 
 /*--------------------------------------------------------------
 # Footer
