--- a/css/style.css
+++ b/css/style.css
@@ -953,7 +953,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #paiment
 {
-  background: url("../img/services.jpg") center top no-repeat fixed;
+  background: url("../img/e.jpg") center top no-repeat fixed;
     background-size: cover;
     background-position: center;
     color: #efefef !important;
