--- a/css/style.css
+++ b/css/style.css
@@ -995,7 +995,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 {
     font-size: 20 px;
     margin-top: 20px;
-    color: #ccc;
+    color: #000000 ;
    
 
 }
