--- a/css/style.css
+++ b/css/style.css
@@ -993,9 +993,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 #paiment p
 {
-    font-size: 14px;
+    font-size: 16px;
     margin-top: 20px;
-    color: #ccc;
+    color:#000000 ;
    
 
 }
