--- a/css/style.css
+++ b/css/style.css
@@ -993,8 +993,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 #paiment p
 {
-    font-size: 16px;
+    font-size: 24px;
     margin-top: 20px;
+  text-align: center;
     color:#000000 ;
    
 
