--- a/css/style.css
+++ b/css/style.css
@@ -995,7 +995,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 {
     font-size: 16px;
     
-  text-align: center;
+margin-top: 20px;
     color:#000000 ;
    
 
