--- a/css/style.css
+++ b/css/style.css
@@ -994,7 +994,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #paiment p
 {
     font-size: 16px;
-    
+    text-align: center;
 margin-top: 20px;
     color:#000000 ;
    
