--- a/css/style.css
+++ b/css/style.css
@@ -775,22 +775,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 {
     margin-top: 40px;
 }
-.icon
-{
-    font-size: 40px;
-    margin: 20px auto;
-    padding: 20px;
-    height: 80px;
-    width: 80px;
-    border: 1px solid #fff;
-    border-radius: 50%;
-}
+
 #services p
 {
-    font-size: 14px;
-    margin-top: 20px;
-    color: #ccc;
-   
+   font-size: 16px;
+    text-align: center;
+margin-top: 20px;
+    color:#000000 ;
 
 }
 .services .col-md-3:hover{
