--- a/css/style.css
+++ b/css/style.css
@@ -802,7 +802,7 @@ margin-top: 20px;
   font-size: 19px;
     text-align: center;
 margin-top: 20px;
-    	color : #FFFFFF
+    	color : #FFFFFF ; 
 }
 
 #clients img {
@@ -832,7 +832,8 @@ margin-top: 20px;
 }
 
 #clients .owl-dot.active {
-  background-color: #FF0000;
+  background-color:  #FFFFFF ; 
+;
 }
 
 
