--- a/css/style.css
+++ b/css/style.css
@@ -983,6 +983,7 @@ margin-top: 20px;
     text-align: center;
 margin-top: 20px;
     	color : #FFFFFF
+          text-shadow: 0px 0px 5px red;
    
 
 }
