--- a/css/style.css
+++ b/css/style.css
@@ -747,7 +747,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /*------------------Services------------*/
 #services
 {
-  background: url("../img/services.jpg") center top no-repeat fixed;
+  background: url("../img/e.jpg") center top no-repeat fixed;
     background-size: cover;
     background-position: center;
     color: #efefef !important;
