--- a/css/style.css
+++ b/css/style.css
@@ -982,7 +982,8 @@ margin-top: 20px;
     text-align: center;
 margin-top: 20px;
     	color : #FFFFFF
-          text-shadow: 0px 0px 5px red;
+        vertical-align: middle;
+
    
 
 }
