--- a/css/style.css
+++ b/css/style.css
@@ -982,7 +982,8 @@ margin-top: 20px;
     text-align: center;
 margin-top: 20px;
     	color : #FFFFFF
-        vertical-align: middle;
+               text-align: center; 
+
 
    
 
