--- a/css/style.css
+++ b/css/style.css
@@ -958,7 +958,7 @@ margin-top: 20px;
 
 #paiment
 {
-  background: url("../img/e.jpg") center top no-repeat fixed;
+  background: url("../img/kilo.jpg") center top no-repeat fixed;
     background-size: cover;
     background-position: center;
     color: #efefef !important;
